# MLETask

./: .gitignore  Questions.md  README.md  Solution_overview.md  pyproject.toml
.github/actions/install-deps/: action.yml
.github/actions/linting/: action.yml
.github/actions/pytype/: action.yml
.github/actions/unit-tests/: action.yml
.github/workflows/: deploy-dev.yml
claims_pipeline/notebooks/: ml-engineer_pre-selection_task.ipynb
claims_pipeline/schemas/data_preprocessing/: data_processing.py
claims_pipeline/schemas/pipeline/: processed_data.py
claims_pipeline/src/: pipeline.py
claims_pipeline/src/config/dev/: pipeline.yml
claims_pipeline/src/config/prod/: pipeline.yml
claims_pipeline/src/data_collection/: data_ingest.py  data_processing.py
claims_pipeline/src/data_preprocessing/: data_preprocessing.py
claims_pipeline/src/model_evaluation/: model_evaluation.py
claims_pipeline/src/model_training/: cv_training.py  initial_training.py
claims_pipeline/src/utils/: load_config_for_env.py  logger.py
claims_pipeline/utils/: logger.py
config/pre-prod/: collect_data.yaml
scripts/: setup_repo.sh
src/claims_pipeline/inference_pipeline/: pipeline.py
src/claims_pipeline/pipeline/: pipeline.py
src/claims_pipeline/training_pipeline/: pipeline.py
src/claims_pipeline/utils/: load_config_for_env.py  logger.py
src/data/: cleaned_claims_dataset.parquet  dataset_from_database.csv  raw_claims_dataset.parquet
src/notebooks/: ml-engineer_pre-selection_task.ipynb
tests/pipeline/data_collection/: test_data_ingest.py
(+45 files in other folders)
