[project]
name = "MLETask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "graphviz>=0.21",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "pyarrow>=21.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "pytype>=2024.10.11",
    "ruff>=0.12.7",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.3",
]
[build-system]
requires = ["setuptools>=67.7.2", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"
